ecmascript/parser/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers/input.ts.stderr
error: Unexpected token `foo_bb`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/classes/classDeclarations/classAbstractKeyword/classAbstractMixedWithModifiers/input.ts:8:21
  |
8 |     abstract public foo_bb();
  |                     ^^^^^^

